--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "formik": "^2.2.9",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.43.4"
+    "sass": "^1.43.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "7.32.0",
