--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.6.0",
+    "bcryptjs": "^2.4.3",
     "formik": "^2.2.9",
+    "mongoose": "^6.0.13",
     "next": "12.0.3",
+    "next-auth": "^3.29.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.43.4",
+    "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
