--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.6.0",
+    "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "formik": "^2.2.9",
     "mongoose": "^6.0.13",
